# braintools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  codecov.yml  conftest.py  pyproject.toml  requirements-cpu.txt  requirements-cuda12.txt  requirements-dev.txt  requirements-doc.txt  requirements-testing.txt  requirements-tpu.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml  type-check.yml
braintools/: __init__.py  _misc.py  _spike_encoder.py  _spike_encoder_test.py  _spike_operation.py  _spike_operation_test.py  _transform.py  _transform_test.py  _typing_test.py  _version.py  surrogate.py  surrogate_test.py  tree.py
braintools/_others/: __init__.py  _spike_encoder_test.py  spike_encoder.py  spike_encoder_test.py  transform.py  transform_test.py
braintools/cogtask/: __init__.py  _typing.py  _version.py  cogtask_test.py  conditional.py  conditional_test.py  conftest.py  context.py  context_test.py  encoder.py  encoder_test.py  feature.py  feature_test.py  label.py  label_test.py  phase.py  phase_test.py  task.py  task_test.py  task_variable_length_test.py  utils.py  utils_test.py
braintools/conn/: __init__.py  _base.py  _base_test.py  _biological.py  _biological_test.py  _common.py  _compartment.py  _compartment_test.py  _complex.py  _complex_test.py  _composable_base.py  _conn_base.py  _conn_base_test.py  _conn_compartment.py  _conn_compartment_test.py  _conn_kernel.py  _conn_kernel_test.py  _conn_point.py  _conn_point_test.py  _conn_population.py  _conn_population_test.py  _distance.py  _distance_test.py  _hierarchical.py  _hierarchical_test.py  _init_base.py  _init_base_test.py  _init_delay.py  _init_delay_test.py  _init_distance.py  _init_distance_test.py  _init_weight.py  _init_weight_test.py  _initialization.py  _interface.py  _io.py  _io_test.py  _kernel.py  _kernel_test.py  _patterns_basic.py  (+17 more)
braintools/file/: __init__.py  _file_comprehensive_test.py  _matfile.py  _matfile_extra_test.py  _msg_checkpoint.py  _msg_checkpoint_async_test.py  _msg_checkpoint_extra_test.py  _msg_checkpoint_test.py  matfile.py  msg_checkpoint.py  msg_checkpoint_test.py
braintools/functional/: __init__.py  _activations.py  _normalization.py  _spikes.py  normalization.py
braintools/init/: __init__.py  _base.py  _base_test.py  _delay.py  _distance.py  _distance_base.py  _distance_base_test.py  _distance_impl.py  _distance_impl_test.py  _distance_test.py  _generic.py  _init.py  _init_base.py  _init_base_test.py  _init_basic.py  _init_basic_test.py  _init_composite.py  _init_composite_test.py  _init_orthogonal.py  _init_orthogonal_test.py  _init_random.py  _init_random_test.py  _init_test.py  _init_variance_scaling.py  _init_variance_scaling_test.py  _init_with_distance.py  _init_with_distance_test.py  _random.py  _random_inits.py  _regular_inits.py  _weight.py
braintools/input/: __init__.py  _composable_base.py  _composable_base_test.py  _composable_basic.py  _composable_basic_test.py  _composable_pulses.py  _composable_pulses_test.py  _composable_stochastic.py  _composable_stochastic_test.py  _composable_test.py  _composable_waveforms.py  _composable_waveforms_test.py  _deprecation.py  _functional_basic.py  (+20 more)
docs/: Makefile  advanced_spiking_metrics.ipynb  animation_and_dynamics.ipynb  api.rst  auto_generater.py  braintools-cogtask-issues-found-20260619.md  braintools-conn-issues-found-20260618.md  braintools-file-issues-found-20260618.md  braintools-init-issues-found-20260618.md  braintools-metric-issues-found-20260618.md  braintools-metric-issues-found-20260619.md  braintools-optim-issues-found-20260618.md  braintools-quad-issues-found-20260618.md  braintools-surrogate-issues-found-20260618.md  braintools-surrogate-issues-found-20260619.md  braintools-trainer-issues-found-20260618.md  braintools-trainer-issues-found-20260619.md  braintools-visualize-issues-found-20260618.md  braintools-visualize-issues-found-20260619.md  classification_losses.ipynb  conf.py  conn_tutorial_01_basic_connectivity.ipynb  conn_tutorial_01_fundamentals.ipynb  conn_tutorial_02_model_specific.ipynb  conn_tutorial_03_composable_initialization.ipynb  conn_tutorial_03_network_topologies.ipynb  conn_tutorial_04_spatial_advanced.ipynb  index.rst  init_tutorial_03_distance_profiles.ipynb  init_tutorial_04_composite_distance_modulated.ipynb  input_tutorial_01_introduction.ipynb  input_tutorial_02_functional_api.ipynb  input_tutorial_04_custom_pipelines.ipynb  interactive_visualization.ipynb  lfp_analysis.ipynb  metric_tutorial_01_classification_losses.ipynb  metric_tutorial_06_spiking_sync.ipynb  metric_tutorial_07_lfp_analysis.ipynb  model_evaluation_plots.ipynb  msgpack_checkpointing.ipynb  (+35 more)
(+180 files in other folders)
