[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braintools"
description = "Modeling tools for brain simulation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "BrainTools Developers", email = "chao.brain@qq.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries"
]
keywords = [
    "brain dynamics programming",
    "brain simulation",
    "brain-inspired computing"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/chaobrain/braintools"
repository = "https://github.com/chaobrain/braintools"
"Bug Tracker" = "https://github.com/chaobrain/braintools/issues"
Documentation = "https://braintools.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["braintools*"]
exclude = [
    "docs*",
    "tests*",
    "dev*",
    "examples*",
    "build*",
    "dist*",
    "braintools.egg-info*"
]

[tool.setuptools.dynamic]
version = { attr = "braintools.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
testing = { file = ["requirements-testing.txt"] }
cpu = { file = ["requirements-cpu.txt"] }
cuda12 = { file = ["requirements-cuda12.txt"] }
tpu = { file = ["requirements-tpu.txt"] }
