[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braintools"
description = "Modeling tools for brain simulation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
dynamic = ["version"]
authors = [
    { name = "BrainTools Developers", email = "chao.brain@qq.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries"
]
keywords = [
    "brain dynamics programming",
    "brain simulation",
    "brain-inspired computing",
    "brain-inspired computation",
    "brain modeling",
    "brain modeling toolbox",
]
dependencies = [
    "jax",
    "numpy>=1.15",
    "brainstate>=0.1.0",
    "brainunit>=0.0.8",
    "typing_extensions",
    "optax",
    "matplotlib",
    "msgpack",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "absl-py",
    "nevergrad",
]
cpu = [
    "jax[cpu]",
]
cuda12 = [
    "jax[cuda12]",
]
cuda13 = [
    "jax[cuda13]",
]
tpu = [
    "jax[tpu]",
]
cogtask = [
    "brainstate>=0.1.0",
    "brainunit>=0.0.8",
]
doc = [
    "pandoc",
    "Jinja2",
    "sphinx>=9.0.4",
    "myst-nb",
    "sphinx_thebe",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme>=1.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-remove-toctrees",
    "jupyter-sphinx>=0.5.3",
    "sphinx-design",
    "sphinx_math_dollar",
    "brainx-sphinx-header>=0.4.0",
]

[project.urls]
homepage = "https://github.com/chaobrain/braintools"
repository = "https://github.com/chaobrain/braintools"
"Bug Tracker" = "https://github.com/chaobrain/braintools/issues"
Documentation = "https://brainx.chaobrain.com/braintools/"

[tool.setuptools.packages.find]
include = ["braintools*"]
exclude = [
    "docs*",
    "tests*",
    "dev*",
    "examples*",
    "build*",
    "dist*",
    "braintools.egg-info*"
]

[tool.setuptools.dynamic]
version = { attr = "braintools._version.__version__" }